[gd_scene load_steps=7 format=3 uid="uid://c6hno6l0pc2sq"]

[ext_resource type="Script" path="res://Battle/UI/BattleUI.gd" id="1_vcw2p"]
[ext_resource type="Texture2D" uid="uid://dt022bhdhlhj7" path="res://Battle/UI/UI_Topbar.png" id="2_n38kh"]
[ext_resource type="Texture2D" uid="uid://cyslux84c5mhd" path="res://Battle/UI/UI_Margin.png" id="3_ta0wx"]
[ext_resource type="Texture2D" uid="uid://d2h21j7shjpg7" path="res://Battle/UI/UI_Minimap.png" id="4_q6pm5"]
[ext_resource type="Texture2D" uid="uid://cah1qeitoko15" path="res://Battle/UI/UI_UnitInfo.png" id="5_o1s7s"]
[ext_resource type="Texture2D" uid="uid://dblukqlhx8uun" path="res://Battle/UI/UI.png" id="6_ks2ew"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 515.0
grow_horizontal = 2
mouse_filter = 1
script = ExtResource("1_vcw2p")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 2
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("6_ks2ew")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("3_ta0wx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 960.0
offset_bottom = 540.0
theme_override_constants/separation = 0

[node name="Topbar" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_n38kh")

[node name="Label" type="Label" parent="VBoxContainer/Topbar"]
layout_mode = 0
offset_left = 14.0
offset_top = -1.0
offset_right = 99.0
offset_bottom = 25.0
text = "databattle"

[node name="Button" type="Button" parent="VBoxContainer/Topbar"]
layout_mode = 0
offset_left = 884.0
offset_top = -11.0
offset_right = 951.0
offset_bottom = 20.0
text = "Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Minimap" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_q6pm5")
stretch_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/Minimap"]
layout_mode = 0
offset_left = 11.0
offset_top = -2.0
offset_right = 80.0
offset_bottom = 24.0
text = "minimap"

[node name="UnitInfo" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_o1s7s")
stretch_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo"]
layout_mode = 0
offset_left = 10.0
offset_top = -2.0
offset_right = 76.0
offset_bottom = 24.0
text = "unit.info"

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo"]
layout_mode = 0
offset_left = 6.0
offset_top = 28.0
offset_right = 46.0
offset_bottom = 51.0

[node name="Move" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo"]
layout_mode = 0
offset_left = 6.0
offset_top = 52.0
offset_right = 57.0
offset_bottom = 78.0

[node name="Size" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo"]
layout_mode = 0
offset_left = 7.0
offset_top = 76.0
offset_right = 47.0
offset_bottom = 99.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo"]
layout_mode = 0
offset_left = 1.0
offset_top = 104.0
offset_right = 130.0
offset_bottom = 218.0

[node name="MoveButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer"]
visible = false
layout_mode = 2
text = "Move"

[node name="Ability1Button" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Ability2Button" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Ability3Button" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Ability4Button" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer"]
visible = false
layout_mode = 2

[node name="EndTurnButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer"]
visible = false
layout_mode = 2
text = "Skip Turn"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer/Ability1Button" to="." method="_on_ability_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer/Ability2Button" to="." method="_on_ability_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer/Ability3Button" to="." method="_on_ability_3_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer/Ability4Button" to="." method="_on_ability_4_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/UnitInfo/VBoxContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
